banner section is done

--- a/index.html
+++ b/index.html
@@ -26,7 +26,27 @@
         </div>
     </header>
     <main>
-        
+        <section class="banner">
+            <div class="banner-container">
+                <div class="banner-left-1">
+                    <img src="images/left-banner-image.jpg" alt="">
+                </div>
+                <div class="banner-right">
+                    <div class="banner-2">
+                        <img src="images/baner-right-image-01.jpg" alt="">
+                    </div>
+                    <div class="banner-3">
+                        <img src="images/baner-right-image-02.jpg" alt="">
+                    </div>
+                    <div class="banner-4">
+                        <img src="images/baner-right-image-03.jpg" alt="">
+                    </div>
+                    <div class="banner-5">
+                        <img src="images/baner-right-image-04.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
