--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="scss/style.css">
 </head>
+
 <body>
     <header>
         <div class="header-navbar">
@@ -13,15 +15,29 @@
                 <img class="nav-logo" src="images/logo.png" alt="">
             </div>
             <div class="navbar-container">
-                
-                <a class="home" href="#">Home<hr></a>
-                <a href="#">Men's<hr></a>
-                <a href="#">Women's<hr></a>
-                <a href="#">Kid's<hr></a>
-                <a href="#">Pages<hr></a>
-                <a href="#">Features<hr></a>
-                <a href="#">Explore<hr></a>
-                
+
+                <a class="home" href="#">Home
+                    <hr>
+                </a>
+                <a href="#">Men's
+                    <hr>
+                </a>
+                <a href="#">Women's
+                    <hr>
+                </a>
+                <a href="#">Kid's
+                    <hr>
+                </a>
+                <a href="#">Pages
+                    <hr>
+                </a>
+                <a href="#">Features
+                    <hr>
+                </a>
+                <a href="#">Explore
+                    <hr>
+                </a>
+
             </div>
         </div>
     </header>
@@ -29,27 +45,38 @@
         <section class="banner">
             <div class="banner-container">
                 <div class="banner-left-1">
-                    <img src="images/left-banner-image.jpg" alt="">
+                    <h1 class="h1">We Are Hexashop</h1>
+                    <p class="p">Awesome, clean & creative HTML5 Template</p>
+                    <button class="btn">Purchase Now!</button>
                 </div>
                 <div class="banner-right">
-                    <div class="banner-2">
-                        <img src="images/baner-right-image-01.jpg" alt="">
+                    <div class="banner-right-1">
+                        <h1 class="h1">Women</h1>
+                        <p class="p">Best Cloths For Women</p>
                     </div>
-                    <div class="banner-3">
-                        <img src="images/baner-right-image-02.jpg" alt="">
+                    <div class="banner-right-2">
+                        <h1 class="h1">Men</h1>
+                        <p class="p">Best Cloths For Men</p>
                     </div>
-                    <div class="banner-4">
-                        <img src="images/baner-right-image-03.jpg" alt="">
+                    <div class="banner-right-3">
+                        <h1 class="h1">Kids</h1>
+                        <p class="p">Best Cloths For Kids</p>
                     </div>
-                    <div class="banner-5">
-                        <img src="images/baner-right-image-04.jpg" alt="">
+                    <div class="banner-right-4">
+                        <h1 class="h1">Accessories</h1>
+                        <p class="p">Best Trend Accessories</p>
                     </div>
+
                 </div>
             </div>
+        </section>
+        <section class="hr">
+            <hr>
         </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
