banner section updated

--- a/index.html
+++ b/index.html
@@ -51,20 +51,45 @@
                 </div>
                 <div class="banner-right">
                     <div class="banner-right-1">
-                        <h1 class="h1">Women</h1>
-                        <p class="p">Best Cloths For Women</p>
+                        <div class="banner-right-1-content-1">
+                            <h1 class="h1">Women</h1>
+                            <p class="p">Best Cloths For Women</p>
+                        </div>
+                        <div class="banner-right-1-content-2">
+                            <h1 class="h1">Women</h1>
+                            <button class="btn">Discover More</button>
+                        </div>
+
                     </div>
                     <div class="banner-right-2">
-                        <h1 class="h1">Men</h1>
-                        <p class="p">Best Cloths For Men</p>
+                        <div class="banner-rihgt-2-content-1">
+                            <h1 class="h1">Men</h1>
+                            <p class="p">Best Cloths For Men</p>
+                        </div>
+                        <div class="banner-right-2-content-2">
+                            <h1 class="h1">Men</h1>
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="banner-right-3">
-                        <h1 class="h1">Kids</h1>
-                        <p class="p">Best Cloths For Kids</p>
+                        <div class="banner-right-3-content-1">
+                            <h1 class="h1">Kids</h1>
+                            <p class="p">Best Cloths For Kids</p>
+                        </div>
+                        <div class="banner-right-3-content-2">
+                            <h1 class="h1">Kids</h1>
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="banner-right-4">
-                        <h1 class="h1">Accessories</h1>
-                        <p class="p">Best Trend Accessories</p>
+                        <div class="banner-right-4-content-1">
+                            <h1 class="h1">Accessories</h1>
+                            <p class="p">Best Trend Accessories</p>
+                        </div>
+                        <div class="banner-right-4-content-2">
+                            <h1 class="h1">Accessories</h1>
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
 
                 </div>
