about men information section done

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
         <section class="hr">
             <hr>
         </section>
+        <section class="about-men">
+            <div class="title">MENS LATEST</div>
+            <div class="info">Details to details is what makes Hexashop different from the other themes.</div>
+        </section>
     </main>
     <footer>
 
