about-women section is done

--- a/index.html
+++ b/index.html
@@ -136,10 +136,13 @@
             </div>
             <img class="next" src="images/next.png">
         </section>
-        <section class="hr">
+        <section class="real">
             <hr>
         </section>
-
+        <section class="about-women">
+            <div class="title">MENS LATEST</div>
+            <div class="info">Details to details is what makes Hexashop different from the other themes.</div>
+        </section>
     </main>
     <footer>
 
