--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
             </div>
             <img class="next" src="images/next.png">
         </section>
+        <section class="hr">
+            <hr>
+        </section>
+        
     </main>
     <footer>
 
