--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@
         <section class="hr">
             <hr>
         </section>
-        
+        <section class="about-kid">
+            <div class="title">MENS LATEST</div>
+            <div class="info">Details to details is what makes Hexashop different from the other themes.</div>
+        </section>
     </main>
     <footer>
 
