hr section created

--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
             </div>
             <img class="next" src="images/next.png">
         </section>
-        
+        <section class="hr">
+            <hr>
+        </section>
         
     </main>
     <footer>
