hr section under container section is created

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="banner-container">
                 <div class="banner-left-1">
                     <h1 class="h1">We Are Hexashop</h1>
-                    <p class="p">Awesome, clean & creative HTML5 Template</p>
+                    <p class="p">Awesome, clegit addan & creative HTML5 Template</p>
                     <button class="btn">Purchase Now!</button>
                 </div>
                 <div class="banner-right">
@@ -272,6 +272,10 @@
                 </div>
                 
             </div>
+        </section>
+
+        <section class="hr">
+            <hr>
         </section>
     </main>
     <footer>
