social-media section is create

--- a/index.html
+++ b/index.html
@@ -277,6 +277,11 @@
         <section class="hr">
             <hr>
         </section>
+
+        <section class="social-media">
+            <div class="title">Social Media</div>
+            <div class="info">Details to details is what makes Hexashop different from the other themes.</div>
+        </section>
     </main>
     <footer>
 
