social-media-photo section is done now

--- a/index.html
+++ b/index.html
@@ -282,6 +282,35 @@
             <div class="title">Social Media</div>
             <div class="info">Details to details is what makes Hexashop different from the other themes.</div>
         </section>
+
+        <section class="social-media-photo">
+            <span class="instagram">
+                <img src="images/instagram-01.jpg" alt="">
+                <h1>Fashion</h1>
+            </span>
+            <span class="instagram">
+                <img src="images/instagram-02.jpg" alt="">
+                <h1>New</h1>
+            </span>
+            <span class="instagram">
+                <img src="images/instagram-03.jpg" alt="">
+                <h1>Brand</h1>
+            </span>
+            <span class="instagram">
+                <img src="images/instagram-04.jpg" alt="">
+                <h1>Makeup</h1>
+            </span>
+            <span class="instagram">
+                <img src="images/instagram-05.jpg" alt="">
+                <h1>Leather</h1>
+            </span>
+            
+            <span class="instagram">
+                <img src="images/instagram-06.jpg" alt="">
+                <h1 >Bag</h1>
+            </span>
+            
+        </section>
     </main>
     <footer>
 
