hr section is again created now

--- a/index.html
+++ b/index.html
@@ -311,6 +311,10 @@
             </span>
             
         </section>
+
+        <section class="hr">
+            <hr>
+        </section>
     </main>
     <footer>
 
