office-container section is done

--- a/index.html
+++ b/index.html
@@ -315,6 +315,48 @@
         <section class="hr">
             <hr>
         </section>
+
+        <section class="office-container">
+            <div class="office-info">
+                <h1>By Subscribing To Our Newsletter You Can Get 30% Off</h1>
+                <p>Details to details is what makes Hexashop different from the other themes.</p>
+                <div class="your-info">
+                    <label for="name">
+                        <input type="text" placeholder="Enter your name" id="name">
+                    </label>
+                    <label for="email">
+                        <input type="text" placeholder="Enter your email" id="email">
+                    </label>
+                    <button class="btn">Send</button>
+                </div>
+            </div>
+            <div class="office-detail">
+                <div class="store-location">
+                    <h1>Store Location:</h1>
+                    <p>Sunny Isles Beach, FL 33160, United States</p>
+                </div>
+                <div class="work-hours">
+                    <h1>Work Hours:</h1>
+                    <p>07:30 AM - 9:30 PM Daily</p>
+                </div>
+                <div class="phone">
+                    <h1>Phone:</h1>
+                    <p>010-020-0340</p>
+                </div>
+                <div class="email">
+                    <h1>Email:</h1>
+                    <p>mail@domain.com</p>
+                </div>
+                <div class="office-location">
+                    <h1>Office Location:</h1>
+                    <p>North Miami Beach</p>
+                </div>
+                <div class="social-medias">
+                    <h1>Social Media:</h1>
+                    <p>Facebook, Instagram, Linkedin</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
