--- a/index.html
+++ b/index.html
@@ -359,7 +359,38 @@
         </section>
     </main>
     <footer>
-
+        <section class="footer-container">
+            <div class="footer-content">
+                <div class="container-content">
+                    <div class="footer-logo">
+                        <img src="images/white-logo.png" alt="">
+                    </div>
+                    <h3>16501 Collins Ave, Sunny IsIes Beach ,Fl #3160, United States </h3>
+                    <h3>mail@domain.com</h3>
+                    <h3>010-020-0340</h3>
+                </div>
+                <div class="categories">Shopping & Catagories
+                    <h3>Mens Shopping</h3>
+                    <h3>Womens Shopping</h3>
+                    <h3>Kids Shopping</h3>
+                </div>
+                <div class="link">Usefull Links
+                    <h4>Homepage</h4>
+                    <h4>About Us</h4>
+                    <h4>Help</h4>
+                    <h4>Contact Us</h4>
+                </div>
+                <div class="help">Help & Information
+                    <h3>Help</h3>
+                    <h3>FAQ</h3>
+                    <h3>Shipping</h3>
+                    <h3>Tracking ID</h3>
+                </div>
+            </div>
+            <hr>
+            <div class="footer-copyright">dv</div>
+            
+        </section>
     </footer>
 </body>
 
