--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="scss/style.css">
+    
 </head>
 
 <body>
@@ -235,7 +238,7 @@
         <section class="container">
             <div class="about-container">
                 <h1>Explore Our Products</h1>
-                <pre> 
+                <p> 
                 You are allowed to use this HexaShop HTML CSS template. 
                 You can feel free to modify or edit this layout. You can 
                 convert this template as any kind of ecommerce CMS 
@@ -256,7 +259,7 @@
                 Please tell your friends about our great website. Thank you. 
                 Venenatis vitae risus eu pretium. Etiam lacinia efficitur nisi
                 at facilisis. Curabitur id suscipit urna sem.
-                </pre>
+                </p>
                 <button class="btn">Discover More</button>
             </div>
             <div class="image-container">
@@ -388,7 +391,16 @@
                 </div>
             </div>
             <hr>
-            <div class="footer-copyright">dv</div>
+            <div class="footer-copyright">
+                <p>Copyright &copy; 2045 Hexashop Co., Ltd. All Rights Reserved</p>
+                <p>Design:<span>TemplateMo</span></p>
+                <div class="icon">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+                    <i class="fa-brands fa-behance"></i>
+                </div>
+            </div>
             
         </section>
     </footer>
